# Qt-OpenCV

./: CMakeLists.txt  interface.cpp  interface.h  label.cpp  label.h
include/: CMakeLists.txt  image2d.h  image2dTempl.hpp  mainWindow.h  myImage.h  statistics.h  statisticsTempl.hpp
src/: CMakeLists.txt  interface.ui  main.cpp  mainWindow.cpp  myImage.cpp
